RESOLVED FIXED308011
[visionOS Debug] 2x cookies/tests are a constant crash
https://bugs.webkit.org/show_bug.cgi?id=308011
Summary [visionOS Debug] 2x cookies/tests are a constant crash
Per Arne Vollan
Reported 2026-02-16 15:52:31 PST
2x cookies/tests are a constant crash on visionOS Debug.
Attachments
Per Arne Vollan
Comment 1 2026-02-16 15:52:33 PST
Per Arne Vollan
Comment 2 2026-02-16 15:57:15 PST
EWS
Comment 3 2026-02-17 12:22:14 PST
Committed 307717@main (bf5b0fd1546b): <https://commits.webkit.org/307717@main> Reviewed commits have been landed. Closing PR #58815 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.