[visionOS Debug] 2x cookies/tests are a constant crash https://bugs.webkit.org/show_bug.cgi?id=308011 rdar://170507140

Reviewed by Basuke Suzuki.

Remove incorrect assert added in 307587@main. It is expected that visibility propagation can be
set up for the same WebContent process multiple times. In that case we return early.

* LayoutTests/platform/visionos/TestExpectations:
* Source/WebKit/UIProcess/ios/WKContentView.mm:
(-[WKContentView _setupVisibilityPropagationForWebProcess:contextID:]):

Canonical link: https://commits.webkit.org/307717@main